# qz

./: .gitignore  Cargo.toml  README.md  rustc-ice-2024-07-06T18_38_21-5910.txt  rustc-ice-2024-07-06T18_38_21-5911.txt
assets/: default.assets.ron  default.settings.ron
assets/buildings/: nest.building.ron  store.building.ron
assets/crafts/: barge.craft.ron  bev.craft.ron  owl.craft.ron  pebble.craft.ron  pest.craft.ron
assets/creatures/: barge.creature.ron  owl.creature.ron  pebble.creature.ron  pest.creature.ron
assets/items/: arc_laser.weapon.ron  autoweld.repair.ron  autoweld_2.repair.ron  dart.weapon.ron  dart_2.weapon.ron  defender.weapon.ron  fusion_core.generator.ron  ion.battery.ron  iron.armor.ron  light_laser.weapon.ron  minireactor.energy.ron  minireactor.generator.ron  scrap_metal.item.ron  shotgun.weapon.ron  solar_array.energy.ron  solar_array.generator.ron  solid.battery.ron
assets/shaders/: background.wgsl
src/: error.rs  lib.rs  main.rs  util.rs
src/components/: ai.rs  assets.rs  controller.rs  craft.rs  credits.rs  faction.rs  item.rs  mod.rs  player.rs  structure.rs  utility.rs  world.rs
src/components/ai/: actions.rs  mod.rs  requirement.rs  scorers.rs  task.rs
src/components/items/: credits.rs  drop.rs  energy.rs  equipment.rs  inventory.rs  mod.rs  repair.rs  weapon.rs
src/plugins/: ai.rs  assets.rs  controllers.rs  debug.rs  equipment.rs  input.rs  inventory.rs  mod.rs  repairs.rs  settings.rs  state.rs  structures.rs  ui.rs  utility.rs  weapons.rs  world.rs
src/plugins/ai/: actions.rs  mod.rs  requirements.rs  scorers.rs  tasks.rs
src/plugins/ui/: game.rs  hud.rs  menu.rs  mod.rs
src/resources/: action.rs  assets.rs  events.rs  factions.rs  mod.rs  settings.rs  trigger.rs  triggers.rs  util.rs  world.rs
src/states/: mod.rs
src/ui/: mod.rs
(+16 files in other folders)
